[package]
name = "raytop"
version = "0.1.4"
edition = "2021"
description = "A real-time TUI monitor for Ray clusters"
license = "Apache-2.0"
repository = "https://github.com/crazyguitar/raytop"
readme = "README.md"
keywords = ["ray", "tui", "gpu", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
